# MovieHighlighter

./: CMakeLists.txt  Movie.qrc  README.md  main.cpp
backend/include/: Movie.h  MovieCore.h  MovieExceptions.h
backend/source/: Movie.cpp  MovieCore.cpp  MovieExceptions.cpp
controller/include/: Controller.h
controller/source/: Controller.cpp
frontend/forms/: AddNewGame.ui  mainwindow.ui
frontend/forms/generate/: moc_AddNewGame.cpp  moc_Controller.cpp  moc_Movie.cpp  moc_mainwindow.cpp  qrc_MovieHighlighter.cpp  ui_AddNewGame.h  ui_mainwindow.h
frontend/include/: AddNewGame.h  mainwindow.h
frontend/source/: AddNewGame.cpp  mainwindow.cpp
patterns/WaiteQueue/: WaiteQueue.h
style/: cascade.qss
